content/contracts-cairo/1.0.0/index.mdx
---
title: Contracts for Cairo
---

**A library for secure smart contract development** written in Cairo for [Starknet](https://starkware.co/product/starknet/). This library consists of a set of [reusable components](./components) to build custom smart contracts, as well as
ready-to-deploy [presets](/contracts-cairo/1.0.0/presets). You can also find other [utilities](/contracts-cairo/api/utilities) including [interfaces and dispatchers](/contracts-cairo/1.0.0/interfaces) and [test utilities](/contracts-cairo/api/testing)
that facilitate testing with Starknet Foundry.

<Callout type='warn'>
This repo contains highly experimental code. Expect rapid iteration. **Use at your own risk.**
</Callout>

<Callout>
You can track our roadmap and future milestones in our [Github Project](https://github.com/orgs/OpenZeppelin/projects/29/).
</Callout>

## Installation

The library is available as a [Scarb](https://docs.swmansion.com/scarb) package. Follow [this guide](https://docs.swmansion.com/scarb/download.html) for installing Cairo and Scarb on your machine
before proceeding, and run the following command to check that the installation was successful:

```bash
$ scarb --version

scarb 2.9.4 (d3be9ebe1 2025-02-19)
cairo: 2.9.4 (https://crates.io/crates/cairo-lang-compiler/2.9.4)
sierra: 1.6.0
```

### Set up your project

Create an empty directory, and `cd` into it:

```bash
mkdir my_project/ && cd my_project/
```

Initialize a new Scarb project:

```bash
scarb init
```

The contents of `my_project/` should now look like this:

```bash
$ ls

Scarb.toml src
```

### Install the library

Install the library by declaring it as a dependency in the project’s `Scarb.toml` file:

```text
[dependencies]
openzeppelin = "1.0.0"
```

<Callout type='warn'>
Make sure the tag matches the target release.
</Callout>

## Basic usage

This is how it looks to build an ERC20 contract using the [ERC20 component](./erc20).
Copy the code into `src/lib.cairo`.

```cairo
#[starknet::contract]
mod MyERC20Token {
    use openzeppelin_token::erc20::{ERC20Component, ERC20HooksEmptyImpl};
    use starknet::ContractAddress;

    component!(path: ERC20Component, storage: erc20, event: ERC20Event);

    // ERC20 Mixin
    #[abi(embed_v0)]
    impl ERC20MixinImpl = ERC20Component::ERC20MixinImpl<ContractState>;
    impl ERC20InternalImpl = ERC20Component::InternalImpl<ContractState>;

    #[storage]
    struct Storage {
        #[substorage(v0)]
        erc20: ERC20Component::Storage
    }

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC20Event: ERC20Component::Event
    }

    #[constructor]
    fn constructor(
        ref self: ContractState,
        name: ByteArray,
        symbol: ByteArray,
        fixed_supply: u256,
        recipient: ContractAddress
    ) {
        self.erc20.initializer(name, symbol);
        self.erc20.mint(recipient, fixed_supply);
    }
}
```

You can now compile it:

```bash
scarb build
```
